@@ -30,7 +30,6 @@ const char ts_help_assist_oneline[] = "Release/Akill infected user";
 const char ts_help_checkchan_oneline[] = "Scan a Channel"; 
 const char ts_help_status_oneline[] = "Current Status of SecureServ";
 const char ts_help_set_oneline[] = "Configure SecureServ";
-const char ts_help_exclude_oneline[] = "Exclude users/channels/servers from scans";
 const char ts_help_cycle_oneline[] = "Scan next channel";
 const char ts_help_list_oneline[] = "Current list of virus definitions";
 const char ts_help_update_oneline[] = "Download latest definitions";
@@ -106,35 +105,6 @@ const char *ts_help_list[] = {
 	"",
 	"View detailed information about what SecureServ's",
 	"definition database currently contains",
-	NULL
-};
-
-const char *ts_help_exclude[] = {
-	"Syntax: \2EXCLUDE LIST\2",
-	"        \2EXCLUDE ADD <hostname> <flag> <reason>\2",
-	"        \2EXCLUDE DEL <index>\2",
-	"",
-	"This command lets you view or manipulate the exception",
-	"list. Exception lists are used to exclude users, or",
-	"servers from scanning. You should at least add a server",
-	"entry for your services IRC name, to stop SecureServ from",
-	"scanning Nickserv, Chanserv etc",
-	"",
-	"\2LIST\2 will list the current exceptions together with an",
-	"ID number for use in removing entries.",
-	"",
-	"\2ADD\2 will add an entry of <hostname> to the exception",
-	"list. Possible flags are:",
-	"2 to indicate a channel name (eg, #help)",
-	"1 to indicate a server name (eg, services.irc-chat.net)",
-	"0 to indicate a hostname (eg, *.adsl.home.com).",
-	"Reason allows you to set a",
-	"reason for the exclusion for future reference",
-	"Wildcards such as * and ? may be used in the hostname.",
-	"",
-	"\2DEL\2 will delete entry <index> from the list of",
-	"exclusions. Use the LIST command to find the index.",
-	"scanning NickServ, ChanServ etc",
 	NULL
 };
 
